Update Hexo Static Content

--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -1749,7 +1749,7 @@ body::before {
   left: 0;
   width: 20rem;
   background-color: #fff;
-  background-image: url("https://cdn.jsdelivr.net/gh/YunYouJun/cdn@master/img/bg/alpha-stars-timing-1.webp");
+  background-image: url("https://cdn.jsdelivr.net/gh/qwbrs/cdn@main/img/bg1.jpg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom 1rem center;
